trunk/Archive2/fa/587814bb3b8f6d/output
main.cpp:4:1: error: 'string' does not name a type
 string a(int n)
 ^
main.cpp: In function 'int main()':
main.cpp:12:21: error: 'a' was not declared in this scope
     std::cout << a(5) << std::endl;
                     ^
